force-app/main/default/objects/df_122_saklegat__c/df_122_saklegat__c.object-meta.xml
<CustomObject>
    <label>Saklegat</label>
    <nameField>
        <label>Saklegat Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Saklegats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>