force-app/main/default/objects/df_122_saklegat__c/fields/efternamn_legatmottageren__c.field-meta.xml
<CustomField>
    <fullName>efternamn_legatmottageren__c</fullName>
    <label>Efternamn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>