force-app/main/default/objects/df_122_saklegat__c/fields/freml_fr_legat__c.field-meta.xml
<CustomField>
    <fullName>freml_fr_legat__c</fullName>
    <label>Föremål för legat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>