force-app/main/default/objects/df_122_saklegat__c/fields/frnamn_legatmottageren__c.field-meta.xml
<CustomField>
    <fullName>frnamn_legatmottageren__c</fullName>
    <label>Förnamn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>