force-app/main/default/objects/df_122_saklegat__c/fields/personnummer_legatmottageren__c.field-meta.xml
<CustomField>
    <fullName>personnummer_legatmottageren__c</fullName>
    <label>Personnummer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>