force-app/main/default/objects/df_122_saklegat__c/fields/r_saklegatet_personligt__c.field-meta.xml
<CustomField>
    <fullName>r_saklegatet_personligt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Är saklegatet personligt?</label>
    <type>Checkbox</type>
</CustomField>