force-app/main/default/objects/df_122_saklegat__c/fields/ytterligare_legatinformation_sak_256__c.field-meta.xml
<CustomField>
    <fullName>ytterligare_legatinformation_sak_256__c</fullName>
    <label>Ytterligare legat-information 93d99</label>
    <length>255</length>
    <type>Text</type>
</CustomField>